infra/modules/app-ecs/alb/listner.tf
# ---------------------------------------------
# lisner for alb app-ecs
# ---------------------------------------------
# HTTP :80 -> 443

resource "aws_lb_listener" "this" {
  count             = var.enable_alb ? 1 : 0
  load_balancer_arn = aws_lb.this[0].arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = try(one(aws_lb_target_group.this[*].arn), null)
  }
}

# HTTPS :443 -> Target Group
/* resource "aws_lb_listener" "https" {
  count             = var.enable_alb ? 1 : 0
  load_balancer_arn = aws_lb.this[0].arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-TLS13-1-2-2021-06"
  certificate_arn   = var.acm_certificate_arn

  default_action {
    type             = "forward"
    target_group_arn = try(one(aws_lb_target_group.this[*].arn), null)
  }
}
 */
